# motorized

./: .flake8  .gitignore  LICENSE.txt  README.md  pyproject.toml
examples/animals/: main.py  models.py  motorized  pyproject.toml  views.py
examples/bookstore/: README.md  pyproject.toml
examples/bookstore/api/: main.py
examples/migrations/: base.py  user_level_field.py
examples/user/: models.py
motorized/: __init__.py  beta.py  client.py  document.py  exceptions.py  keywords.py  migration.py  query.py  queryset.py  types.py  utils.py
motorized/contrib/: fastapi.py
tests/: conftest.py  models.py  test_aggregations.py  test_client.py  test_document.py  test_general.py  test_migrations.py  test_offline.py  test_query.py  test_queryset.py  test_utils.py  utils.py
