[tool.poetry]
name = "motorized"
version = "0.3.1"
description = "Asyncio mongodb ODM"
authors = ["Sebastien Nicolet <snicolet95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
motor = "^2.5.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
pytest = {extras = ["coverage"], version = "^6.2.5"}
mongomock = "^3.23.0"
flake8 = "^4.0.1"
pylint = "^2.11.1"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
