[tool.poetry]
name = "motorized"
version = "0.7.0"
description = "Asyncio mongodb ODM based on pydantic"
authors = ["Sebastien Nicolet <snicolet95@gmail.com>"]
license = "MIT"
keywords = ["MongoDB", "Pydantic", "Asyncio", "ODM"]
documentation = "https://github.com/Chr0nos/motorized/blob/master/README.md"

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.1.1"
pydantic = "^2.4.2"
depsolve = "^0.2.0"
pydantic-partial = "^0.5.2"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
pytest = {extras = ["coverage"], version = "^6.2.5"}
flake8 = "^4.0.1"
pylint = "^2.11.1"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"
mock = "^4.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
