[tool.poetry]
name = "animals"
version = "0.1.0"
description = "Sample of REST api with motorized"
authors = ["Sebastien Nicolet <snicolet95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
motorized = "^0.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
