[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Sebastien Nicolet <snicolet95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
motorized = "^0.3.3"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
